--- a/custom.css
+++ b/custom.css
@@ -1,7 +1,7 @@
 body {
   margin: 10px;
   white-space: nowrap;
-  width: 300px;
+  width: 450px;
 }
 
 #container {
@@ -13,4 +13,9 @@ body {
 table {
   margin-top: 1em;
   width: 100%;
+}
+
+.update-button {
+  display: block;
+  margin: 1em auto;
 }
