--- a/custom.css
+++ b/custom.css
@@ -34,6 +34,9 @@ table {
 table.url-parts th {
   text-align: left;
 }
+table input {
+  width: 100%;
+}
 button svg {
   height: 1em;
   width: 1em;
